--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr" >
+<html>
 	<head>
 		<meta charset="utf-8" />
 		<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet" >
