Changed key to end with .txt so it can show it in browser

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		</style>
 	</head>
 	<body>
-		<a href="./id_rsa.pub" target="_blank" >
+		<a href="./id_rsa.pub.txt" target="_blank" >
 			<img src="./ssh.svg" alt="ssh" />
 			<div class="grow" ></div>
 		</a>
