--- a/index.html
+++ b/index.html
@@ -15,13 +15,14 @@
 				align-items: center;
 				justify-content: center;
 				flex-direction: column;
+				font-family: Arial, sans-serif;
 			}
 			img {
-				/* pointer-events: none; */
+				cursor: pointer;
 				width: 100%;
 				max-width: 500px;
 				box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-				transition: box-shadow 300ms ease-in-out, transform 300ms ease-in-out;
+				transition: box-shadow 300ms ease-in-out, transform 300ms ease-in-out, border-radius 300ms ease-in-out;
 				border-radius: 15px;
 				transform: scale3d(1, 1, 1);
 			}
@@ -34,13 +35,31 @@
 				width: 100%;
 				transition: all 300ms ease-in-out;
 			}
-			a {
+			div {
 				display: flex;
 				align-items: center;
 				justify-content: center;
 				flex-direction: column;
 				height: 100%;
 				width: 100%;
+			}
+			div.snack {
+				position: fixed;
+				left: 50%;
+				transform: translateX(-50%) translateY(80px);
+				bottom: 0;
+				height: auto;
+				width: auto;
+				padding: 10px 15px;
+				background-color: #282D35;
+				color: #B9C0CB;
+				border-radius: 5px;
+				transition: transform 500ms;
+				transition-timing-function: ease-in-out;
+				font-size: 18px;
+			}
+			div.snack.show {
+				transform: translateX(-50%) translateY(-40px);
 			}
 			@media screen and (max-width: 500px) {
 				html, body {
@@ -49,6 +68,7 @@
 				img, img:hover {
 					box-shadow: none;
 					transform: scale3d(1, 1, 1);
+					border-radius: 0px;
 				}
 				.grow {
 					flex: auto;
@@ -57,9 +77,39 @@
 		</style>
 	</head>
 	<body>
-		<a href="./id_rsa.pub.txt" target="_blank" >
+		<div>
 			<img src="./ssh.svg" alt="ssh" />
 			<div class="grow" ></div>
-		</a>
+			<div class="snack" >Curious Cat</div>
+		</div>
+		<script type="module" >
+			import copy from "https://cdn.jsdelivr.net/npm/copy-to-clipboard@3.3.3/+esm"
+
+			function notify ( msg ) {
+				const snack = document.querySelector(".snack")
+				snack.textContent = msg
+				snack.classList.add("show")
+				setTimeout(() => {
+					snack.classList.remove("show")
+				}, 3000 )
+			}
+
+			document.querySelector("img").addEventListener("click", () => {
+				const sshKey = [
+					"ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDNKPUWPvfWgFlQtVXzLmsnGt80r9kknDs0mUKdTSQj",
+					"qM5oseQq1dUaDXNRaPe5/H4eZxQ7z8wefQdZx8FtxX8+BP546pTIpOg0M4LJif7NWtFBEWOSvwzmKTQU",
+					"HhKGiP2HlcL79KURP1y1x35eQmk8zD3OKo59lLfi9sNp8JuQEG9EymCynQwvjVgI4bflyGgeRdCTlD3x",
+					"XrmYkewbHuvzPIcyEwzm4iIIT4ksZqkngIcGzWkK9nnAUB0oYGw+7Pcx4QI4YBg3oqBfdC5v1mXXyDIQ",
+					"OtHQh6DD0BoZf1FKoo5MeWpvJCOLA6CJWE3JEzbVWYeN10q41tRuDoj5wLUVMpg1GREOJFMpHFOVREf+",
+					"cmTyWk0Qk6KiPAFWZuRjlKdW19uO9D6+bGH/3Jf5lNCBFi5JzDY85GB6LabzyGQOaJ9pOXVFA+t6zTL1",
+					"6sNLeraMXMJeeQrRtm77llluFDPsPUJO4eyYie2kPCjo7aRwDGZ5wALO/e0b2EHLb0xkjcc9UleHPDyB",
+					"y7HDjd+QqgPP/U+15+QGdKlfOpjflKGaAndUS3J57H4DRPJTceXTZStNEShkBHfl9wXfPm7uQciArqI/",
+					"v7mHsqpJtv8xXzoOK/RnB6wWTbDG0OZBZj/mWMQ9RJTv9cBknMYe5XcJ38jWWSCNX7ujsaTiCShkL7ii",
+					"3w== rafael@grigorian.org"
+				].join("\n")
+				copy ( sshKey )
+				notify ("Copied To Clipboard!")
+			})
+		</script>
 	</body>
 </html>
